Add ROI property table

--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -51,6 +51,23 @@
 
         <img src="sample.jpg" style="display: none;" id="image" />
 
+        <br /><br /><br />
+
+        <table id="roi-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Type</th>
+                    <th>Label</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <button id="update-roi-table">Update</button>
+
+        <br /><br /><br />
+
         <img src="sample.jpg" style="width: 200px; height: 200px;" />
 </body>
 </html>
