--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -19,6 +19,8 @@
 </script>
 </head>
 <body>
+        <pre id="saved-json" style="width: 600px; float: right; border: 1px solid black; height: 800px; overflow: scroll;"></pre>
+
 	<canvas id="myCanvas" style="width: 600px; height: 400px; border: solid red 1px;"></canvas>
 
         <br /><br /><br />
@@ -46,6 +48,8 @@
         <button id="undo"></button>
 
         <button id="redo"></button>
+
+        <button id="save">Save</button>
 
         Zoom: <input type="number" min="0" max="1000" id="zoom-tool" value="100" step="10" />
 
